dfir_rs/tests/compile-fail/surface_null.stderr
error: Degenerate subgraph detected, is there a disconnected `null()` or other degenerate pipeline somewhere?
 --> tests/compile-fail/surface_null.rs:5:9
  |
5 |         null();
  |         ^^^^^^
